Fixed text visibility

--- a/style.css
+++ b/style.css
@@ -92,6 +92,11 @@ image:hover{
     margin-top: 350px;
 }
 
+#LandingInfo{
+    margin-top: 50px;
+    background-color: #120e1b85;
+    border-radius: 15px;
+}
 .landing-text {
 	font-size: 1.5em;
 	font-family: 'Montserrat', sans-serif;
